Kevin Spicer).

fsync_directories defaults to None, to avoid errors in testing
(suggestion by Charles Duffy).

bug#14209: Security bug with --restrict-read-only and
--restrict-update-only allowed file statting and directory listing
outside path.  Bug with --restrict option allowed writes outside path.
(Reported by Charles Duffy.)

bug #14304: Python 2.2 compatibility spoiled by device files.


New in v1.0.0 (2005/08/14)
--------------------------

Handle cases of junk uid/gids better on 64bit systems.  (Bug report by
Nick Bailey)

Filenames in the file_statistics*gz files are now quoted the same way
as filenames in the metadata file (LF => \n and \ => \\).

Fix from Paul P Komkoff Jr for uid typo in text_to_entrytuple.

bug#12726: fix regressing of devices while running as non-root -- zero
length files are created as placeholders.

bug#13476: must always compare device numbers when we compare inode
numbers -- fix a non-fatal problem with hardlinks when a filesystem is
moved to another device (and the inodes don't change).

bug#13475: correct an UpdateError when backing up hardlinks with EAs
and/or ACLs.

debian bug#306798: SELinux security attributes can not be removed and
rdiff-backup should not fail when it fails to remove them from temp
files.  fix from Konrad Podloucky.

bug#12949: eliminate an exception during fs abilities testing on OS X 10.4.
fix from Daniel Westermann-Clark.

patch#4136: OSX filename/rsrc has been deprecated for some time, and as of OSX
10.4 it causes log spam.  the new proper use is filename/..namedfork/rsrc.  fix
from Daniel Westermann-Clark.

Log EACCES from listxattr rather than raising an exception -- this can happen
when the repository has permission problems.

Added Keith Edmunds patch adding the --create-full-path option.

Fixed selection bug reported by Daniel Richard G.

bug#13576: You can now back ACLs to a computer that doesn't have the
posix1e module.

bug#13613: Fix for overflow error that could happen when backing up